[gd_scene load_steps=2 format=3 uid="uid://gcga6tgoyx0b"]

[ext_resource type="Script" path="res://Control.gd" id="1_3tm20"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 2.0
offset_top = 1.0
offset_right = 1.0
offset_bottom = -13.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_3tm20")
metadata/_edit_use_anchors_ = true

[node name="Aumentar" type="Button" parent="."]
custom_minimum_size = Vector2(10, 20)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.14
anchor_top = 0.527
anchor_right = 0.358
anchor_bottom = 0.665
offset_left = -4.72
offset_top = -2.28
offset_right = 4.01599
offset_bottom = 2.39999
theme_override_font_sizes/font_size = 50
text = "+"
metadata/_edit_use_anchors_ = true

[node name="Disminuir" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.382
anchor_top = 0.533
anchor_right = 0.604
anchor_bottom = 0.669
offset_left = 0.463959
offset_top = -3.12
offset_right = 0.0499878
offset_bottom = 0.122009
theme_override_font_sizes/font_size = 50
text = "-"
metadata/_edit_use_anchors_ = true

[node name="Multiplicar" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.625
anchor_top = 0.533
anchor_right = 0.847
anchor_bottom = 0.672
offset_left = 0.5
offset_top = -1.12
offset_right = 0.0859375
offset_bottom = 0.202026
theme_override_font_sizes/font_size = 50
text = "X"
metadata/_edit_use_anchors_ = true

[node name="Dividir" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.138
anchor_top = 0.711
anchor_right = 0.359
anchor_bottom = 0.852
offset_left = -0.424011
offset_top = -0.0400085
offset_right = 0.309998
offset_bottom = 0.00201416
theme_override_font_sizes/font_size = 50
text = "/"
metadata/_edit_use_anchors_ = true

[node name="C" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.382
anchor_top = 0.711
anchor_right = 0.604
anchor_bottom = 0.855
offset_left = 0.463959
offset_top = 1.95999
offset_right = 0.0499878
offset_bottom = 0.0820313
theme_override_font_sizes/font_size = 50
text = "C"
metadata/_edit_use_anchors_ = true

[node name="=" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.632
anchor_top = 0.711
anchor_right = 0.854
anchor_bottom = 0.854
offset_left = 0.463989
offset_top = 0.959991
offset_right = 0.0499878
offset_bottom = -0.277954
theme_override_font_sizes/font_size = 50
text = "=
"
metadata/_edit_use_anchors_ = true

[node name="texto" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.686
anchor_top = 0.105
anchor_right = 0.907
anchor_bottom = 0.486
offset_left = -0.528076
offset_top = 17.8
offset_right = -0.236084
offset_bottom = -0.0400085
theme_override_font_sizes/font_size = 68
text = "0"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2
metadata/_edit_use_anchors_ = true

[node name="operador" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.623
anchor_top = 0.105
anchor_right = 0.844
anchor_bottom = 0.458
offset_left = -321.204
offset_top = 84.8
offset_right = -495.912
offset_bottom = -45.12
theme_override_font_sizes/font_size = 68
text = "+"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2
metadata/_edit_use_anchors_ = true

[node name="operador2" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.623
anchor_top = 0.105
anchor_right = 0.844
anchor_bottom = 0.458
offset_left = 6.79596
offset_top = 83.8
offset_right = -167.912
offset_bottom = -46.12
theme_override_font_sizes/font_size = 68
text = "="
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2
metadata/_edit_use_anchors_ = true

[node name="numero1" type="TextEdit" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.136
anchor_top = 0.219
anchor_right = 0.342
anchor_bottom = 0.406
offset_left = -0.128006
offset_top = -0.160004
offset_right = 0.384003
offset_bottom = 0.159973
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 22
placeholder_text = "
Inserte número aquí"
metadata/_edit_use_anchors_ = true

[node name="numero2" type="TextEdit" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.419
anchor_top = 0.202
anchor_right = 0.625
anchor_bottom = 0.405
offset_left = -0.0120239
offset_top = 6.72
offset_right = -0.5
offset_bottom = -0.200012
theme_override_font_sizes/font_size = 22
placeholder_text = "
Inserte número aquí"
metadata/_edit_use_anchors_ = true

[connection signal="button_up" from="Aumentar" to="." method="_on_aumentar_button_up"]
[connection signal="button_up" from="Disminuir" to="." method="_on_disminuir_button_up"]
[connection signal="button_up" from="Multiplicar" to="." method="_on_multiplicar_button_up"]
[connection signal="button_up" from="Dividir" to="." method="_on_dividir_button_up"]
[connection signal="button_up" from="C" to="." method="_on_c_button_up"]
[connection signal="button_up" from="=" to="." method="_on__button_up"]
